Prevent accent color hover animation on mobile devices, implemented only on Explore page for testing

--- a/app/static/explore.css
+++ b/app/static/explore.css
@@ -283,12 +283,14 @@
 	background: var(--color-darker);
 	z-index: -1; /* behind recipe2’s content */
 	transition: transform 0.15s;
-  }
-.recipe2:hover {
-	transform: translate(5px, -5px);
 }
-.recipe2:hover::before {
-	transform: translate(-5px, 5px);
+@media (hover: hover) and (pointer: fine) {
+	.recipe2:hover {
+		transform: translate(5px, -5px);
+	}
+	.recipe2:hover::before {
+		transform: translate(-5px, 5px);
+	}
 }
 .recipe2cont .r2a:nth-of-type(4n) .recipe2 {
     margin-right: 0; /* Remove margin-right from every 4th item */
